--- a/public/defaultPreferences/settings.json
+++ b/public/defaultPreferences/settings.json
@@ -1,4 +1,5 @@
 {
-  "title": "デジタル裾野",
-  "background_color": "#17a2b8"
+  "title": "Simple Geo Viewer",
+  "background_color": "#17a2b8",
+  "tooltip_background_color": "#ffffb0"
 }
