--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "maplibre-gl": "^1.15.2",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-collapsible": "^2.10.0",
     "react-dom": "17.0.2",
     "react-rangeslider": "^2.2.0"
   },
