設定ファイルの実装を修正

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
+    "sourceMap": true,
     "paths": {
       "@/*": ["src/*"]
     }
