--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.970.0",
     "axios": "^0.21.1",
     "deck.gl": "^8.8",
+    "japanmesh": "^1.0.0",
     "maplibre-gl": "^1.15.2",
     "next": "11.1.0",
     "react": "17.0.2",
