--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "amazon-cognito-identity-js": "^5.0.6",
     "aws-sdk": "^2.970.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.9.1",
+    "chartjs-adapter-dayjs": "^1.0.0",
+    "dayjs": "^1.11.5",
     "deck.gl": "^8.8",
     "japanmesh": "^1.0.0",
     "maplibre-gl": "^1.15.2",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-collapsible": "^2.10.0",
     "react-dom": "17.0.2",
     "react-rangeslider": "^2.2.0"
