ダッシュボードで設定していたdefaultPreferencesの設定をもとに戻した

--- a/public/defaultPreferences/config.json
+++ b/public/defaultPreferences/config.json
@@ -1,434 +1,18 @@
 {
   "layers": [
     {
-      "id": "nanto-C0401-tatemono-yoto-5",
-      "type": "mvt",
-      "source": "https://data.mlit-data.jp/nanto/nanto-building/{z}/{x}/{y}.pbf",
-      "getFillColor": [200, 200, 200, 200],
-      "getLineColor": [200, 200, 200, 200],
-      "opacity": 0.8,
-      "minZoom": 13,
-      "maxZoom": 18,
-      "visible": false
-    },
-    {
+      "id": "hinanbasho-tokyo",
       "type": "geojson",
-      "id": "nanto-yoto",
-      "getLineColor": [150, 150, 150, 100],
-      "getLineWidth": 6.5,
-      "visible": false,
-      "minzoom": 12,
-      "layerId": null,
-      "source": "https://data.mlit-data.jp/nanto/cityplanh30/youto_ver2_col.geojson"
+      "source": "./data/13.geojson",
+      "getPointRadius": 50
     },
     {
+      "id": "gyosei-tokyo",
       "type": "geojson",
-      "id": "nanto-yoto-gai",
-      "getLineColor": [150, 150, 150, 100],
-      "getLineWidth": 6.5,
-      "visible": false,
-      "minzoom": 12,
-      "layerId": null,
-      "source": "https://data.mlit-data.jp/nanto/cityplanh30/youto_outside_ver2_col.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-yoto-toshigai",
-      "getLineColor": [150, 150, 150, 100],
-      "getLineWidth": 6.5,
-      "visible": false,
-      "minzoom": 12,
-      "layerId": null,
-      "source": "https://data.mlit-data.jp/nanto/cityplanh30/tokei_outside_ver2_col.geojson"
-    },
-    {
-      "id": "zenrin-building",
-      "type": "mvt",
-      "source": "https://mvt.digitalsmartcity.jp/v1/16/16210/{z}/{x}/{y}.pbf",
-      "getFillColor": [200, 200, 200, 200],
-      "getLineColor": [200, 200, 200, 200],
-      "opacity": 0.8,
-      "minZoom": 13,
-      "maxZoom": 18,
-      "visible": false
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-road",
-      "getLineWidth": 2.5,
-      "getLineColor": [255, 0, 0],
-      "minzoom": 14,
-      "visible": true,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/road/road.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-local",
-      "getLineWidth": 2.5,
-      "getLineColor": [0, 0, 255],
-      "minzoom": 14,
-      "visible": true,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/road/road_local.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-pref",
-      "getLineWidth": 2.5,
-      "getLineColor": [0, 255, 0],
-      "minzoom": 14,
-      "visible": true,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/road/road_ken.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-road-1",
-      "getLineWidth": 2.5,
-      "getLineColor": [153, 153, 153],
-      "minzoom": 14,
-      "visible": false,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/road/road_1.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-road-2",
-      "getLineWidth": 2.5,
-      "getLineColor": [153, 153, 153],
-      "minzoom": 14,
-      "visible": false,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/road/road_2.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-road-others",
-      "getLineWidth": 2.5,
-      "getLineColor": [153, 153, 153],
-      "minzoom": 14,
-      "visible": false,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/road/road_others.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "nanto-road-bridge-point",
-      "iconSizeScale": 60,
-      "sizeScale": 6,
-      "icon": {
-        "url": "images/bridge_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 10,
-      "visible": false,
-      "source": "https://data.mlit-data.jp/nanto/road/bridge_point.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "nanto-railroad-cross-point",
-      "iconSizeScale": 60,
-      "sizeScale": 6,
-      "icon": {
-        "url": "images/railway_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 12,
-      "visible": false,
-      "source": "https://data.mlit-data.jp/nanto/road/railroad_cross_point.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "nanto-road-tunnel-point",
-      "iconSizeScale": 60,
-      "sizeScale": 6,
-      "icon": {
-        "url": "images/tunnel_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 11,
-      "visible": false,
-      "source": "https://data.mlit-data.jp/nanto/road/road_tunnel_point.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-railway-railway",
-      "getLineWidth": 2.5,
-      "getLineColor": [102, 107, 52],
-      "minzoom": 9,
-      "visible": true,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/railway/nanto_railroad.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-railway-station",
-      "getLineWidth": 2.5,
-      "getLineColor": [102, 149, 0],
-      "minzoom": 12,
-      "visible": true,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/railway/nanto_station.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "nanto-busstop",
-      "iconSizeScale": 60,
-      "sizeScale": 8,
-      "icon": {
-        "url": "images/busstop_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 15,
-      "visible": false,
-      "source": "https://data.mlit-data.jp/nanto/GTFS/GTFS-stops.json"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-busline",
-      "getLineColor": [68, 186, 245],
-      "getLineWidth": 2.5,
-      "minzoom": 12,
-      "visible": false,
-      "lineWidthUnits": "pixels",
-      "lineWidthScale": 1,
-      "source": "https://data.mlit-data.jp/nanto/GTFS/GTFS-shapes.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "nanto-public",
-      "iconSizeScale": 60,
-      "sizeScale": 8,
-      "icon": {
-        "url": "images/publicbulding_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 14,
-      "visible": false,
-      "source": "https://data.mlit-data.jp/nanto/nanto-public.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "nanto-ippin",
-      "iconSizeScale": 60,
-      "sizeScale": 8,
-      "icon": {
-        "url": "images/shop_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 15,
-      "visible": true,
-      "source": "https://data.mlit-data.jp/nanto/nanto_ippin.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-stat",
-      "getLineColor": [0, 0, 240, 200],
-      "getLineWidth": 6.5,
-      "getFillColor": [220, 220, 80, 120],
-      "visible": false,
-      "minzoom": 12,
-      "layerId": null,
-      "source": "https://data.mlit-data.jp/nanto/H27nanto-jichi-merge.geojson"
-    },
-    {
-      "type": "geojson",
-      "id": "nanto-H31_fudepolygon",
-      "getLineColor": [0, 0, 240, 200],
-      "getLineWidth": 6.5,
-      "getFillColor": [63, 201, 141, 120],
-      "visible": false,
-      "minzoom": 12,
-      "layerId": null,
-      "source": "https://data.mlit-data.jp/nanto/H31_fudepolygon.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "75f22706-f672-444d-9676-207646dbc3ef",
-      "iconSizeScale": 60,
-      "sizeScale": 8,
-      "icon": {
-        "url": "images/tourism_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 12,
-      "visible": true,
-      "tooltipType": "thumbnail",
-      "source": "https://www.geospatial.jp/ckan/dataset/344caa3e-9fbe-48df-9e06-913c81d2f357/resource/75f22706-f672-444d-9676-207646dbc3ef/download/nantubejigyousyodata.geojson"
-    },
-    {
-      "id": "8a7f408b-3ab5-4c67-bcf6-45f0d080a704",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/097538a9-03d1-4e1a-8ccd-be3a52fb1644/resource/b8090a91-8308-4aaf-b291-49b10811555a/download/census5.geojson"
-    },
-    {
-      "id": "0ee3aa67-dee4-4cb4-97bf-dfdc89137e7f",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/41f8d0aa-b221-466a-b785-55ec737bf96f/resource/c3849229-8bf8-4ed7-b4ac-1f6de69d601c/download/census6.geojson"
-    },
-    {
-      "id": "9215d6ca-f5e7-4e88-b127-28b9a71c04a7",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/abcbd203-50d7-48a8-959c-15f962470641/resource/29c8c038-5031-4b54-a06f-bb1cc05c645e/download/census4.geojson"
-    },
-    {
-      "id": "6f8e5134-e6ca-4cbe-8a2a-49af354f2a28",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/dc31cada-ea29-4d65-b1f9-e3fb2960016f/resource/05ba814d-fec0-4b8b-8cef-8d88cffd60c5/download/census11.geojson"
-    },
-    {
-      "id": "7b5be1c0-b02c-4a0f-8c08-cd3df05c3338",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/ed6c30cc-a73a-4c9b-9c3a-c89b3463679e/resource/21f99c0d-a002-4ff2-be30-7a551ee71a75/download/census7.geojson"
-    },
-    {
-      "id": "0b70af1c-b130-408c-b3c1-d9d539fb249b",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/da965c3e-5be7-4e8c-9ea1-7f9b2c3bdff9/resource/1cc97265-44a1-4dc2-a126-520874d8cea6/download/census8.geojson"
-    },
-    {
-      "id": "8d86432a-9731-4b2e-aba8-d7a41d813762",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/009bb1e7-8163-4abd-b12e-13dd1c532e18/resource/6e8f7f53-ad2c-49e4-a9d0-b0a75102eb02/download/census10.geojson"
-    },
-    {
-      "id": "4b84b9af-57ee-4f88-8a28-9405705da8e1",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/c3177a5a-8a15-46de-a3b0-830ae9e24546/resource/75aee150-bf65-4f92-b3bc-4bd57d68a65e/download/census12.geojson"
-    },
-    {
-      "id": "034b9946-f3ee-4830-aad3-ece9f843e219",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/f4797556-6b37-46f3-a9a7-da56195fd58d/resource/cc54dda6-741e-44fd-bbaa-bb5f88051b66/download/census3.geojson"
-    },
-    {
-      "id": "f2e06ccd-77a9-4dce-9b44-c5c1087f371b",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/0352fb83-fba4-4cfc-bf5c-cc36deeb3a78/resource/c175c782-3a6e-49e4-a03b-ae8b5fcd4760/download/census9.geojson"
-    },
-    {
-      "id": "bab6a887-a30b-4fb8-9bb7-63275902a287",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/ac5fb687-5316-454f-9e50-6f00196d0cda/resource/d21700a9-c10d-4958-a461-5665872fe94b/download/census2.geojson"
-    },
-    {
-      "id": "bff18837-8a46-42b4-b9de-96453b5dccdb",
-      "type": "geojson",
-      "minzoom": 10,
-      "maxzoom": 18,
-      "visible": false,
-      "getLineColor": [192, 192, 192, 200],
-      "getLineWidth": 6.5,
-      "source": "https://www.geospatial.jp/ckan/dataset/a48c3532-a53c-48a2-9c5f-25a083a9a5e7/resource/66ac9301-ec6e-4974-a2ee-3f001a81d2c5/download/census1.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "d7a56026-f64f-429b-a710-edd55eb600dd",
-      "iconSizeScale": 60,
-      "sizeScale": 8,
-      "icon": {
-        "url": "images/digitalring_yellow.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 12,
-      "visible": true,
-      "tooltipType": "thumbnail",
-      "source": "https://www.geospatial.jp/ckan/dataset/57b3542d-f755-4a13-bcb8-d0ed9d4250c0/resource/d7a56026-f64f-429b-a710-edd55eb600dd/download/digitalring_nanto_211214.geojson"
-    },
-    {
-      "type": "geojsonicon",
-      "id": "7f9f0b34-ceed-431c-b7a3-f4ba11ec0eb6",
-      "iconSizeScale": 60,
-      "sizeScale": 8,
-      "icon": {
-        "url": "images/tourism_blue.png",
-        "width": 64,
-        "height": 64,
-        "anchorY": 64
-      },
-      "minzoom": 12,
-      "visible": true,
-      "source": "https://digitalcityservice.s3.ap-northeast-1.amazonaws.com/dcs/nanto_city/SpecificThemes/specific_theme_nanto.geojson"
+      "source": "./data/N03-21_13_210101.geojson",
+      "getFillColor": [100, 200, 255, 150],
+      "getLineColor": [0, 0, 0, 255],
+      "getLineWidth": 10
     }
   ]
 }
