--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "17.0.2",
     "react-collapsible": "^2.10.0",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.5",
     "react-rangeslider": "^2.2.0"
   },
   "devDependencies": {
