--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-chartjs-2": "^4.3.1",
     "react-collapsible": "^2.10.0",
     "react-dom": "17.0.2",
-    "react-rangeslider": "^2.2.0"
+    "react-rangeslider": "^2.2.0",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.14.0",
