--- a/public/disaster/data/config.json
+++ b/public/disaster/data/config.json
@@ -26,7 +26,7 @@
         "width": 64,
         "height": 64,
         "anchorY": 64,
-        "color": "red"
+        "color": "lblue"
       },
       "minzoom": 6,
       "visible": true,
@@ -58,7 +58,7 @@
         "width": 64,
         "height": 64,
         "anchorY": 64,
-        "color": "yellow"
+        "color": "green"
       },
       "minzoom": 6,
       "visible": true,
