--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "17.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-collapsible": "^2.10.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.5",
     "react-rangeslider": "^2.2.0",
